<resources>
    <string name="app_name">Movie Jetpack Pro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_show">Tv Show</string>
    <string name="movie">Movie</string>
    <string name="loading_text">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="titlenya">Titlenya</string>
    <string name="date">Date</string>
    <string name="rate">8.0</string>
    <string name="descripsinya">Descripsinya</string>
</resources>
